# openpyn-nordvpn-juiceSSH

./: .codacy.yml  .gitattributes  .gitignore  .remarkrc  Gemfile  README.md  build.gradle  default-detekt-config.yml  generate_tiles_multiprocess.py  gradle.properties  mapfile.xml  settings.gradle
app/: CMakeLists.txt  build.gradle  default.properties  detekt-baseline.xml  inject.gradle  lint-baseline.xml  lint.xml  other.gradle  proguard-rules-release.pro
app/schemas/: schema.json
app/src/debug/: AndroidManifest.xml
app/src/debug/res/layout/: item_log.xml
app/src/debug/res/menu/: menu_main.xml  menu_settings.xml
app/src/debug/res/values/: themes.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: emojis.json  world.mbtiles  world_night.mbtiles
app/src/main/cpp/: CMakeLists.txt  sqlite3ndk.cpp  sqlite3ndk.h
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/sqlite/: Android.mk  JNIHelp.cpp  android_database_SQLiteConnection.cpp
app/src/main/jni/sqlite-android/: Android.mk  JNIHelp.cpp  android_database_SQLiteConnection.cpp
app/src/main/jni/sqlite4java/: Android.mk
app/src/main/res/color/: control_checkable_material.xml  favorite_icon_tint.xml
app/src/main/res/drawable/: btn_checkbox_checked_material.xml  fab_connect.xml  fab_favorite.xml  fab_switch.xml  flag_ae.xml  flag_al.xml  flag_ar.xml  flag_at.xml  flag_au.xml  flag_az.xml  flag_ba.xml  flag_be.xml  flag_bg.xml  flag_br.xml  flag_ca.xml  flag_ch.xml  flag_cl.xml  flag_cr.xml  flag_cy.xml  flag_cz.xml  flag_de.xml  flag_dk.xml  flag_ee.xml  flag_eg.xml  flag_es.xml  flag_fi.xml  flag_fr.xml  flag_gb.xml  flag_ge.xml  flag_gr.xml  flag_hk.xml  flag_hr.xml  flag_hu.xml  flag_id.xml  flag_ie.xml  flag_il.xml  flag_in.xml  flag_is.xml  flag_it.xml  flag_jp.xml  (+126 more)
app/src/main/res/drawable-anydpi/: ic_georgia_40dp.xml  ic_greece_40dp.xml  ic_hungary_40dp.xml  ic_moldova_40dp.xml  ic_norway_40dp.xml  ic_spain_40dp.xml  ic_taiwan_40dp.xml
app/src/main/res/drawable-v23/: btn_checkbox_checked_material.xml
app/src/main/res/drawable-v27/: ic_github_black_24dp.xml  ic_list_black_24dp.xml  ic_my_location_black_24dp.xml  ic_round_filter_list_24.xml  ic_round_my_location_24.xml  ic_round_settings_24.xml  ic_round_star_24.xml  ic_round_star_border_24.xml  ic_star_border_black_24dp.xml  launch_screen.xml
app/src/main/res/layout/: abc_preference_dialog_edittext.xml  abc_preference_material.xml  (+23 more)
app/src/release/: AndroidManifest.xml
app/src/test/resources/: simplelogger.properties  test.properties
(+946 files in other folders)
